<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_product_name" />

        <EditText
            android:id="@+id/edit_add_name"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/add_product_name_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView

            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_product_quantity" />

        <EditText
            android:id="@+id/edit_add_quantity"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:hint="@string/add_product_quantity_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_product_price" />

        <EditText
            android:id="@+id/edit_add_price"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:hint="@string/add_product_price_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_product_supplier" />

        <EditText
            android:id="@+id/edit_add_supplier"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/add_product_supplier_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_product_picture" />
        
        <Button
            android:id="@+id/add_take_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_picture_button"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/add_picture_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_add_white_24dp"/>

</LinearLayout>