<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_product_name" />

        <EditText
            android:id="@+id/edit_add_name"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/add_product_name_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView

            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/add_product_quantity" />

        <Button
            android:id="@+id/edit_sale_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_product_sale"/>

        <TextView
            android:id="@+id/edit_add_quantity"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/edit_receive_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_product_receive"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_product_price" />

        <EditText
            android:id="@+id/edit_add_price"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:hint="@string/add_product_price_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/add_product_supplier" />

        <EditText
            android:id="@+id/edit_add_supplier"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/add_product_supplier_hint" />

        <Button
            android:id="@+id/edit_order_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_product_order"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_product_picture" />

    </LinearLayout>

    <ImageView
        android:id="@+id/edit_picture_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/ic_add_white_24dp"/>


</LinearLayout>